objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Primary_Technology_Discussed__c</fullName>
        <description>Describes primary technology for SE engagement (This field is created for SE use only for Resource Assignment Engine Project)</description>
        <label>Primary Technology Discussed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CiscoOne</fullName>
                </value>
                <value>
                    <fullName>CLOUD PLATFORM &amp; SERVICES</fullName>
                </value>
                <value>
                    <fullName>COLLABORATION-Conferencing</fullName>
                </value>
                <value>
                    <fullName>COLLABORATION-Contact Center</fullName>
                </value>
                <value>
                    <fullName>COLLABORATION-TP Endpoints</fullName>
                </value>
                <value>
                    <fullName>COLLABORATION-TP Multiparty Conferencing</fullName>
                </value>
                <value>
                    <fullName>COLLABORATION-UC Endpoints</fullName>
                </value>
                <value>
                    <fullName>COLLABORATION-UC Infra Applications</fullName>
                </value>
                <value>
                    <fullName>COMPUTING SYS-HyperFlex</fullName>
                </value>
                <value>
                    <fullName>COMPUTING SYS-UCS B-Series Blade Servers</fullName>
                </value>
                <value>
                    <fullName>COMPUTING SYS-UCS C3X60 Servers</fullName>
                </value>
                <value>
                    <fullName>COMPUTING SYS-UCS CiscoOne and Other SW</fullName>
                </value>
                <value>
                    <fullName>COMPUTING SYS-UCS C-Series Rack Servers</fullName>
                </value>
                <value>
                    <fullName>DC SWITCHING-NX2/4/5/6K</fullName>
                </value>
                <value>
                    <fullName>DC SWITCHING-NX3K</fullName>
                </value>
                <value>
                    <fullName>DC SWITCHING-NX7K</fullName>
                </value>
                <value>
                    <fullName>DC SWITCHING-NX8K</fullName>
                </value>
                <value>
                    <fullName>DC SWITCHING-NX9K</fullName>
                </value>
                <value>
                    <fullName>DC SWITCHING-Optics-DC Allocation</fullName>
                </value>
                <value>
                    <fullName>DC SWITCHING-SAN</fullName>
                </value>
                <value>
                    <fullName>DIGITAL MEDIA</fullName>
                </value>
                <value>
                    <fullName>ENTERPRISE ROUTING-Ent.Access Routing</fullName>
                </value>
                <value>
                    <fullName>ENTERPRISE ROUTING-Ent.Edge Routing</fullName>
                </value>
                <value>
                    <fullName>ENT SWITCHING-Access</fullName>
                </value>
                <value>
                    <fullName>ENT SWITCHING-ConnetdPlatforms</fullName>
                </value>
                <value>
                    <fullName>ENT SWITCHING-Core</fullName>
                </value>
                <value>
                    <fullName>ENT SWITCHING-Ent.Small Biz Switching</fullName>
                </value>
                <value>
                    <fullName>IOT-Vertical Solutions</fullName>
                </value>
                <value>
                    <fullName>MERAKI-Meraki Communications</fullName>
                </value>
                <value>
                    <fullName>MERAKI-Meraki Security &amp; Routing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Report_Type__c</fullName>
        <description>This field used in Jabber Integration with SFDC application.Used to group records on report.</description>
        <formula>"Total Calls per Object"</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportingCallObject__c</fullName>
        <description>Reporting Field  for better performance</description>
        <externalId>true</externalId>
        <label>ReportingCallObject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Manager_Name_Level_1__c</fullName>
        <description>Reporting Level Manager Name Level 1</description>
        <formula>Owner:User.Reporting_Up_Level_1_Manager__c</formula>
        <label>Reporting Manager Name Level 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Manager_Name_Level_2__c</fullName>
        <description>Reporting Level Manager Name Level 2</description>
        <formula>Owner:User.Reporting_Up_Level_2_Manager__c</formula>
        <label>Reporting Manager Name Level 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Up_Manager_Chain__c</fullName>
        <description>Reporting Up Manager Chain</description>
        <formula>Owner:User.Reporting_Up_Manager_Chain__c</formula>
        <label>Reporting Up Manager Chain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SE_Role__c</fullName>
        <description>Shows what type of role did the SE have in the interaction (This field is for SE Use only for Resource Assignment Engine project)</description>
        <label>SE Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>CSE/xSA</fullName>
                </value>
                <value>
                    <fullName>VT</fullName>
                </value>
                <value>
                    <fullName>Competitive</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Technology_Discussed__c</fullName>
        <description>Tracking GVS&amp;CS Services reps activity and quality customer engagements to understand impact on bookings and revenue.</description>
        <label>Secondary Technology Discussed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CiscoOne</fullName>
                </value>
                <value>
                    <fullName>CLOUD PLATFORM &amp; SERVICES</fullName>
                </value>
                <value>
                    <fullName>COLLABORATION-Conferencing</fullName>
                </value>
                <value>
                    <fullName>COLLABORATION-Contact Center</fullName>
                </value>
                <value>
                    <fullName>COLLABORATION-TP Endpoints</fullName>
                </value>
                <value>
                    <fullName>COLLABORATION-TP Multiparty Conferencing</fullName>
                </value>
                <value>
                    <fullName>COLLABORATION-UC Endpoints</fullName>
                </value>
                <value>
                    <fullName>COLLABORATION-UC Infra Applications</fullName>
                </value>
                <value>
                    <fullName>COMPUTING SYS-HyperFlex</fullName>
                </value>
                <value>
                    <fullName>COMPUTING SYS-UCS B-Series Blade Servers</fullName>
                </value>
                <value>
                    <fullName>COMPUTING SYS-UCS C3X60 Servers</fullName>
                </value>
                <value>
                    <fullName>COMPUTING SYS-UCS CiscoOne and Other SW</fullName>
                </value>
                <value>
                    <fullName>COMPUTING SYS-UCS C-Series Rack Servers</fullName>
                </value>
                <value>
                    <fullName>DC SWITCHING-NX2/4/5/6K</fullName>
                </value>
                <value>
                    <fullName>DC SWITCHING-NX3K</fullName>
                </value>
                <value>
                    <fullName>DC SWITCHING-NX7K</fullName>
                </value>
                <value>
                    <fullName>DC SWITCHING-NX8K</fullName>
                </value>
                <value>
                    <fullName>DC SWITCHING-NX9K</fullName>
                </value>
                <value>
                    <fullName>DC SWITCHING-Optics-DC Allocation</fullName>
                </value>
                <value>
                    <fullName>DC SWITCHING-SAN</fullName>
                </value>
                <value>
                    <fullName>DIGITAL MEDIA</fullName>
                </value>
                <value>
                    <fullName>ENTERPRISE ROUTING-Ent.Access Routing</fullName>
                </value>
                <value>
                    <fullName>ENTERPRISE ROUTING-Ent.Edge Routing</fullName>
                </value>
                <value>
                    <fullName>ENT SWITCHING-Access</fullName>
                </value>
                <value>
                    <fullName>ENT SWITCHING-ConnetdPlatforms</fullName>
                </value>
                <value>
                    <fullName>ENT SWITCHING-Core</fullName>
                </value>
                <value>
                    <fullName>ENT SWITCHING-Ent.Small Biz Switching</fullName>
                </value>
                <value>
                    <fullName>IOT-Vertical Solutions</fullName>
                </value>
                <value>
                    <fullName>MERAKI-Meraki Communications</fullName>
                </value>
                <value>
                    <fullName>MERAKI-Meraki Security &amp; Routing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_Task_Id__c</fullName>
        <description>Data Migration Field: Used to generate reports, rollback data changes, mass data changes in SFDC etc</description>
        <label>Source Task Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Task_What_Id__c</fullName>
        <description>Data Migration Field: Used to generate reports, rollback data changes, mass data changes in SFDC etc</description>
        <label>Source Task What Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Task_Who_Id__c</fullName>
        <description>Data Migration Field: Used to generate reports, rollback data changes, mass data changes in SFDC etc</description>
        <label>Source Task Who Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stated_Purpose__c</fullName>
        <description>Describes the purpose or objectives for the event or task as explained to the customer.</description>
        <label>Stated Purpose</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>This field used in Jabber Integration with SFDC application.Stores status of the call.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Name__c</fullName>
        <label>Task Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Outcome__c</fullName>
        <description>Describes the outcome of the task conducted with the customer.</description>
        <label>Task Outcome</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Task_Stage__c</fullName>
        <label>Task Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Purchase</fullName>
                </value>
                <value>
                    <fullName>Onboard</fullName>
                </value>
                <value>
                    <fullName>Implement</fullName>
                </value>
                <value>
                    <fullName>Use</fullName>
                </value>
                <value>
                    <fullName>Engage</fullName>
                </value>
                <value>
                    <fullName>Adopt</fullName>
                </value>
                <value>
                    <fullName>Optimize</fullName>
                </value>
                <value>
                    <fullName>Advocate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Type__c</fullName>
        <label>Task Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACTIVITIES</fullName>
                </value>
                <value>
                    <fullName>EXIT CRITERIA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Theater__c</fullName>
        <description>Describes which Cisco geographical region the activities managed by”.</description>
        <inlineHelpText>Theater must be selected in order to use the Marketing Campaign field</inlineHelpText>
        <label>Theater</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Americas-Canada</fullName>
                </value>
                <value>
                    <fullName>Americas-Global Enterprise Segment</fullName>
                </value>
                <value>
                    <fullName>Americas-LATAM</fullName>
                </value>
                <value>
                    <fullName>Americas-US Commercial</fullName>
                </value>
                <value>
                    <fullName>Americas-US Public Sector</fullName>
                </value>
                <value>
                    <fullName>APJC-APAC</fullName>
                </value>
                <value>
                    <fullName>APJC-Greater China</fullName>
                </value>
                <value>
                    <fullName>APJC-Japan</fullName>
                </value>
                <value>
                    <fullName>EMEAR</fullName>
                </value>
                <value>
                    <fullName>Global Enterprise</fullName>
                </value>
                <value>
                    <fullName>Global Service Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Travel_Time__c</fullName>
        <description>Shows Travel time for Interaction (This field is for SE Use only for Resource Assignment Engine project)</description>
        <label>Travel Time (in HRS)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_Of_Interaction__c</fullName>
        <description>This field is created for Resource Assignment Engine project for SE use only. It defines the reason for this activity and type of interaction.</description>
        <label>Type Of Interaction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UCCE_CPV10__c</fullName>
        <description>Core UCCE</description>
        <label>GUID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UCCE_CPV1__c</fullName>
        <label>Phone (+E.164)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>UCCE_CPV2__c</fullName>
        <description>Core UCCE</description>
        <label>Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UCCE_Call_GUID__c</fullName>
        <description>Core UCCE (ECC variable "user.media.id")</description>
        <label>Call GUID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Category__c</fullName>
        <description>User Category used for reporting</description>
        <formula>Owner:User.User_Category__c</formula>
        <label>User Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WEBXMeetingDetails__c</fullName>
        <formula>HYPERLINK("https://integration.webex.com/SaCSFService/director.do?act=link&amp;eventid=" &amp; Id &amp; "&amp;sid=" &amp; GETSESSIONID() &amp; "&amp;svr=" &amp; $Api.Partner_Server_URL_60, "WebEx Meeting Details")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WebEx Meeting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_ID__c</fullName>
        <label>What ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What__c</fullName>
        <label>What</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Who_ID__c</fullName>
        <label>Who ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Who__c</fullName>
        <label>Who</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>MyDelegatedActivities_d_11</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team's Activities</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Activities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Open_Tasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Tasks</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today's Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
</CustomObject>